Added absract class for entities, interface for components, changed DAO.